--- a/style.css
+++ b/style.css
@@ -1,3 +1,64 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #333;
+  margin-top: 30px;
+}
+
+#wrapper {
+  width: 75%;
+  background-color: #f5f5dc;
+  border: 5px solid #000;
+  border-radius: 10px;
+  margin: auto;
+}
+
+header h1,
+header h2 {
+  width: 100%;
+  background-color: crimson;
+  margin: 0;
+  text-align: center;
+}
+
+h1,
+h2,
+p {
+  padding: 0.4em 1em;
+}
+
+h2 {
+  background-color: deeppink;
+  border-top: 2px solid #000;
+  border-bottom: 2px solid #000;
+  margin: 0.5em 0;
+  text-align: center;
+}
+
+div {
+  text-align: center;
+}
+
+button {
+  width: 50%;
+  font-size: 20px;
+  color: #f5f5dc;
+  background-color: #333;
+  border-radius: 10px;
+  box-shadow: 2px 2px #000;
+  padding: 15px;
+  margin: 5px 0;
+  cursor: pointer;
+}
+
+button:focus {
+  color: deeppink;
+}
+
 .classAdded {
   font-size: 20px;
   color: #d2691e;
@@ -10,4 +71,12 @@
   color: #24d21e;
   background-color: #000;
   border: 2px solid #24d21e;
+}
+
+footer {
+  width: 100%;
+  background-color: crimson;
+  border-top: 2px solid #000;
+  padding: 15px;
+  margin-top: 15px;
 }
